--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
             </div>
             <input type="submit" value="submit input">
         </form>
+        <p><a href="/results">Results</a></p>
         <p>{{ greeting }}</p>
     </div>
 </div>
@@ -34,7 +35,7 @@
 
 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.10/angular-route.min.js"></scrip
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.10/angular-route.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
 <script src="js/controllers.js" type="text/javascript"></script>
